--- a/pannel/cashier.html
+++ b/pannel/cashier.html
@@ -102,7 +102,178 @@
                     </ol>
                 </div>
             </div>
-            <div class="counting">sdad</div>
+            <div class="counting">
+                <!-- <div class="counting_header"></div> -->
+                <div id="counter_body">
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><img src="../image/dropdown.png" alt="dropdown"></p>
+                            <p>4</p>
+                            <p>Beef patty</p>
+                            <p>₱190</p>
+                            <div><i><img src="../image/remove.png" alt="X"></i></div>
+                        </li>
+                        <li></li>
+                    </ol>
+                </div>
+                <div class="totaling">
+                    <section>
+                        <li>Payment Method</li>
+                        <li>
+                            <select name="paymentmethod" id="pm">
+                                <option value="Cash">Cash</option>
+                                <option value="Digital_Payment">Digital Payment</option>
+                            </select>
+                        </li>
+                    </section>
+                    <section>
+                        <li>Subtotal</li>
+                        <li>₱1,900</li>
+                    </section>
+                    <section>
+                        <li>Discount (%)</li>
+                        <li>10</li>
+                    </section>
+                    <section >
+                        <li>Total Amount</li>
+                        <li>₱1,700</li>
+                    </section>
+                    <section>
+                        <button id="discount">Discount</button>
+                        <button id="proceed">Proceed</button>
+                    </section>
+                </div>
+            </div>
         </div>
 
     </div>
