--- a/pannel/cashier.html
+++ b/pannel/cashier.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    
+
     <title>POS</title>
 </head>
 
@@ -114,7 +114,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -124,7 +130,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -134,7 +146,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -144,7 +162,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -154,7 +178,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -164,7 +194,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -174,7 +210,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -184,7 +226,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -194,7 +242,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -204,7 +258,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -214,7 +274,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -224,7 +290,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -234,7 +306,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                     <ol>
                         <li>
@@ -244,7 +322,13 @@
                             <p>₱190</p>
                             <div><i><img src="../image/remove.png" alt="X"></i></div>
                         </li>
-                        <li></li>
+                        <li class="qntity">
+                            <div>
+
+                                <p>Quantity</p>
+                                <input type="number" name="qntity" id="qtt">
+                            </div>
+                        </li>
                     </ol>
                 </div>
                 <div class="totaling">
@@ -265,7 +349,7 @@
                         <li>Discount (%)</li>
                         <li>10</li>
                     </section>
-                    <section >
+                    <section>
                         <li>Total Amount</li>
                         <li>₱1,700</li>
                     </section>
