--- a/pannel/cashier.html
+++ b/pannel/cashier.html
@@ -118,7 +118,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -134,7 +134,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -150,7 +150,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -166,7 +166,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -182,7 +182,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -198,7 +198,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -214,7 +214,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -230,7 +230,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -246,7 +246,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -262,7 +262,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -278,7 +278,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -294,7 +294,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -310,7 +310,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
@@ -326,7 +326,7 @@
                             <div>
 
                                 <p>Quantity</p>
-                                <input type="number" name="qntity" id="qtt">
+                                <input type="number" name="qntity" id="">
                             </div>
                         </li>
                     </ol>
