--- a/pannel/history.html
+++ b/pannel/history.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styling/history.css">
     <title>POS</title>
 </head>
 
@@ -16,7 +17,7 @@
 
             <section>
                 <li><img src="../image/logo.png" alt="logo" id="logo"></li>
-                <li class="search"><input type="search" name="search" placeholder="Seach products..." id="search" onclick="funs()"><label for="search"><i class="fa " ></i></label></li>
+                <li class="title_section">History</li>
             </section>
             <section>
                 <li class="first">r</li>
@@ -29,7 +30,7 @@
 
         <div class="side_nav">
             <div class="inner_side_nav">
-                <li id="cashier" >
+                <li id="cashier">
                     <div class=""></div>
                     <div class="textdp"><i></i>Cashier</div>
                 </li>
@@ -48,18 +49,176 @@
                     <div class="textdp"><i></i>Settings</div>
                 </li>
             </div>
-            
+
         </div>
         <div class="middle_side">
+            <div class="history_cont">
+                <div class="time_section">
+                    <div class="today">
+                        <h4>Today</h4>
+                        <div class="today_cont">
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="yesterday">
+                        <h4>Yesterday</h4>
+                        <div class="yesterday_cont">
 
-            <div class="products">
-                
-                <div class="category_nav"></div>
-                <div class="products_content">
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                        </div>
 
+                    </div>
+                    <div class="last_week">
+                        <h4>A week ago</h4>
+                        <div class="last_week_cont">
+
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                            <ol>
+                                <li>
+                                    <h5>Amount Paid</h5>
+                                    <p>₱145</p>
+                                </li>
+                                <li>
+                                    <h5>Reference No.</h5>
+                                    <p>7874445741</p>
+                                </li>
+                                <li>
+                                    <h5>Date Time</h5>
+                                    <p>04/09/04 - 8:04pm</p>
+                                </li>
+                            </ol>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-            <div class="counting">sdad</div>
+            <div class="history_pane">
+                <div class="history_info">
+                    <ol>
+                        <p>7874445741</p>
+                        <h4>Reference No.</h4>
+                    </ol>
+                    <ol>
+                        <li>
+                            <p><p>3</p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p><p>3</p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p><p>3</p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p><p>3</p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+ 
+                    </ol>
+                    <ol>
+                        <li>
+                            <p>Payment Method</p>
+                            <p>Gcash</p>
+                        </li>
+                        <li>
+                            <p>Subtotal</p>
+                            <p>₱1451</p>
+                        </li>
+                        <li>
+                            <p>Discount (%)</p>
+                            <p>10</p>
+                        </li>
+                        <li>
+                            <p>Total Amount</p>
+                            <p>₱1351</p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+
         </div>
 
     </div>
