--- a/pannel/reports.html
+++ b/pannel/reports.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styling/reports.css">
     <title>POS</title>
 </head>
 
@@ -52,14 +53,7 @@
         </div>
         <div class="middle_side">
 
-            <div class="products">
-                 
-                <div class="category_nav"></div>
-                <div class="products_content">
 
-                </div>
-            </div>
-            <div class="counting">sdad</div>
         </div>
 
     </div>
