--- a/pannel/history.html
+++ b/pannel/history.html
@@ -180,20 +180,145 @@
                         <h4>Reference No.</h4>
                     </ol>
                     <ol>
+                        
                         <li>
-                            <p><p>3</p> Beef patty</p>
+                            <p>3</p>
+                            <p>Beef patty sdsadadsd</p>
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p><p>3</p> Beef patty</p>
+                            <p>3</p>
+                            <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p><p>3</p> Beef patty</p>
+                            <p>3</p>
+                            <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p><p>3</p> Beef patty</p>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p>Beef patty sdsadadsd</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p>Beef patty sdsadadsd</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>356</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p>Beef patty sdsadadsd</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
+                            <p>₱121</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                            <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
  
