--- a/pannel/history.html
+++ b/pannel/history.html
@@ -179,7 +179,7 @@
                         <p>7874445741</p>
                         <h4>Reference No.</h4>
                     </ol>
-                    <ol>
+                    <ol class="history_ordered">
                         
                         <li>
                             <p>3</p>
@@ -192,52 +192,7 @@
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p>Beef patty sdsadadsd</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
+                            <p>123</p>
                             <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
@@ -262,17 +217,7 @@
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p>356</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
+                            <p>123</p>
                             <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
@@ -297,7 +242,7 @@
                             <p>₱121</p>
                         </li>
                         <li>
-                            <p>3</p>
+                            <p>123</p>
                             <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
@@ -311,16 +256,7 @@
                             <p> Beef patty</p>
                             <p>₱121</p>
                         </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
-                        <li>
-                            <p>3</p>
-                            <p> Beef patty</p>
-                            <p>₱121</p>
-                        </li>
+
  
                     </ol>
                     <ol>
